--- a/wkls/index.html
+++ b/wkls/index.html
@@ -171,7 +171,7 @@
                 };
 
                 const xhr = new XMLHttpRequest();
-                xhr.open("POST", "/api/brush");
+                xhr.open("POST", "/api/mlwkls");
                 xhr.setRequestHeader("Content-Type", "application/json");
 
                 xhr.onload = () => {
@@ -206,7 +206,7 @@
                 };
 
                 const xhr = new XMLHttpRequest();
-                xhr.open("POST", "/api/brush");
+                xhr.open("POST", "/api/mlwkls");
                 xhr.setRequestHeader("Content-Type", "application/json");
 
                 xhr.onload = () => {
@@ -276,7 +276,7 @@
                 };
 
                 const xhr = new XMLHttpRequest();
-                xhr.open("POST", "/api/brush");
+                xhr.open("POST", "/api/mlwkls");
                 xhr.setRequestHeader("Content-Type", "application/json");
 
                 xhr.onload = () => {
