--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -47,6 +47,8 @@
                         <li><a href="#"><i class="fab fa-windows" aria-hidden="true"></i>KB Link</a></li>
                         <li><a href="#"><i class="fab fa-windows" aria-hidden="true"></i>KB Link</a></li>
                         <li><a href="#"><i class="fab fa-windows" aria-hidden="true"></i>KB Link</a></li>
+                        <li><a href="#"><i class="fab fa-windows" aria-hidden="true"></i>KB Link</a></li>
+                        <li><a href="#"><i class="fab fa-windows" aria-hidden="true"></i>KB Link</a></li>
                     </ul>
                 </section>
             </article>
