--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -12,7 +12,7 @@
 <body>
     <video autoplay muted loop id="video"></video>
     <script>
-        var videoSources = ["/mlcenitex/bg0.mp4", "/mlcenitex/bg1.mp4"];
+        var videoSources = ["/mlcenitex/bg0.mp4"];
         var randomIndex = Math.floor(Math.random() * videoSources.length);
         var video = document.getElementById("video");
         video.src = videoSources[randomIndex];
