--- a/wkls/index.html
+++ b/wkls/index.html
@@ -77,13 +77,13 @@
                 <h3>Student Attendance</h3>
                 <p id="studentAttendancePreview"></p>
                 <h3>English</h3>
-                <textarea id="englishPreview" rows="10"></textarea>
+                <textarea id="englishPreview" class="resizable-textarea" rows="10"></textarea>
                 <h3>Math</h3>
-                <textarea id="mathPreview" rows="10"></textarea>
+                <textarea id="mathPreview" class="resizable-textarea" rows="10"></textarea>
                 <h3>Science</h3>
-                <textarea id="sciencePreview" rows="10"></textarea>
+                <textarea id="sciencePreview" class="resizable-textarea" rows="10"></textarea>
                 <h3>History</h3>
-                <textarea id="historyPreview" rows="10"></textarea>
+                <textarea id="historyPreview" class="resizable-textarea" rows="10"></textarea>
             </div>
         </div>
         <script>
